0.0.6 - Performance improvements and result caching